vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_for_return.vv
fn main() {
	'' == fn () string {
		for _ in 0 .. 1 {
			return $embed_file(@FILE).path
		}
		return ''
	}()
}
